ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meltingpoc
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  tls:
    - secretName: traefik-cert
  rules:
  - host: meltingpoc.k8.wildwidewest.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: evenement-parcours-integration
servicePort: 80
